# rustian-minecraft-server

./: .gitignore  Cargo.toml  OpenSSL-Win64.lnk  README.md  actor model join world procedure.drawio  actor model structure.drawio  actors.md  chunk_data.txt  dumme-fehler.md  progress.md  run.bat
code_generators/: generate_code.bat  generate_data.bat
code_generators/code/: blocks.js  blocks_OLD.js  chunk_send_order.js  destinations.json  generator_lib.js  generator_test.js  hash_algorhitm.js  insert_files.js  particle_fields.json  registries.js  test.rs
code_generators/generated_code/: blocks.rs
src/: main.rs
src/actor_model/: mod.rs
src/crypto/: hash.rs  minecraft_encryption.rs  mod.rs
src/helpers/: bit_array.rs  chat_components.rs  chunk_send_order.rs  color.rs  mod.rs  namespaced_key.rs  nibble_array.rs  registry.rs  rotation.rs  vector.rs
src/helpers/fast/: json.rs
src/helpers/mojang_api/: hexdigest.rs  mod.rs
src/helpers/nibble_array/: mod.rs  size_4096.rs
src/packet/: data.rs  data_types.md  mod.rs  packet_handler.rs  packet_ids.rs
src/packet/handshake/: mod.rs
src/packet/handshake/receive/: mod.rs
src/packet/login/: mod.rs
src/packet/login/receive/: encryption_response.rs  login_plugin_response.rs  login_start.rs  mod.rs
src/packet/login/send/: disconnect.rs  encryption_request.rs  login_plugin_request.rs  login_success.rs  mod.rs  set_compression.rs
src/packet/packet_handler/: mod.rs  packet_receiver.rs  packet_sender.rs
src/packet/play/: mod.rs
src/packet/play/receive/: chat_message.rs  client_settings.rs  entity_action.rs  held_item_change.rs  (+7 more)
src/packet/status/: mod.rs
src/server/: mod.rs  registries.rs
src/server/universe/: entity_id_generator.rs  gamemode.rs  mod.rs  player.rs  tags.rs
wiki.vg/: Protocol.html  README.md
wiki.vg/Protocol_Files/: load.css  load_002.css
(+56 files in other folders)
