[package]
name = "minecraft"
version = "0.1.0"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
lazy_static = "0.1.*"
either = "1.5.3"
# Logging
colorful = "0.2.1"
# Serial
serde = "1.0.103"
json = "0.12.0"
hematite-nbt = "0.4.1"
# Encryption dependencies
rust-crypto = "0.2.36"
openssl = "0.10"
rsa-der = "0.2.1"
# Math dependencies
rand = "0.7"
micromath = { version = "1.0.0", features = ["vector"] }
num-bigint = "0.2.3"
num-traits = "0.2"
num-derive = "0.2"
regex = "1"
uuid = { version = "0.4", features = ["use_std", "v4"] }
