[package]
name = "minecraft"
version = "0.1.0"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
async-trait = "0.1.*"
# Logging
colorful = "0.2.1"
# Serial
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
hematite-nbt = "0.5"
byteorder = "1"
rustc-serialize = "0.3"
# Encryption dependencies
rust-crypto = "0.2.36"
openssl = "0.10"
rsa-der = "0.2.1"
# Math dependencies
rand = "0.7"
#micromath = { version = "1.0.0", features = ["vector"] }
num-bigint = "0.3"
num-traits = "0.2"
num-derive = "0.3"
regex = "1"
uuid = { version = "0.8", features = ["default", "v3", "v4"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "unwind"
lto = "fat"
incremental = true
codegen-units = 32